--- a/tests/sample_eventgen_conf/jinja/eventgen.conf.jinja
+++ b/tests/sample_eventgen_conf/jinja/eventgen.conf.jinja
@@ -1,6 +1,6 @@
 [Test_Jinja]
 end = 1
-count = 5
+count = 1
 generator = jinja
 jinja_template_dir = templates
 jinja_target_template = test_jinja.template
@@ -9,13 +9,26 @@ earliest = -3s
 latest = now
 outputMode = httpevent
 httpeventServers = {"servers":[{ "protocol":"https", "address":"127.0.0.1", "port":"8088", "key":"8d5ab52c-3759-49e3-b66a-5213ce525692"}]}
+disabled = 1
 
-[Test_Jinja_foo]
+[Test_Jinja_loop]
 end = 1
 count = 5
 generator = jinja
 jinja_template_dir = templates
 jinja_target_template = test_jinja_loop.template
+jinja_variables = {"large_number":1000}
+earliest = -3s
+latest = now
+outputMode = httpevent
+httpeventServers = {"servers":[{ "protocol":"https", "address":"127.0.0.1", "port":"8088", "key":"8d5ab52c-3759-49e3-b66a-5213ce525692"}]}
+disabled = 1
+
+[Test_Jinja_timeslice]
+end = 1
+generator = jinja
+jinja_template_dir = templates
+jinja_target_template = test_jinja_timeslice.template
 jinja_variables = {"large_number":1000}
 earliest = -3s
 latest = now
